introduce some variation in element background colors

--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -6,8 +6,12 @@ $buycolor_dark: #29bb77;
 $sellcolor_dark: #e95e5e;
 $buycolor_light: #207a46;
 $sellcolor_light: #99302b;
-$light_body_bg: white;
+$light_body_bg: #fafafa;
 $dark_body_bg: #091a28;
+$light_form_bg: #fafafae4;
+$dark_form_bg: #091a28e4;
+$light_panel: #f0f0f0;
+$dark_panel: #122739;
 $light_border_color: #ddd;
 $dark_border_color: #383f4b;
 $light_input_border: #999;
