--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -23,7 +23,7 @@
 {{end}}
 
 {{define "header"}}
-<header id=header class="maintop">
+<header id=header class="maintop panel">
   {{$authed := .UserInfo.Authed}}
   <a href="/" class="logo-icon d-none d-md-block"></a>
   <a href="/" class="logo-icon d-block d-md-none"></a>
