--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -227,7 +227,7 @@
 {{end}}
 
 {{define "regAssetForm"}}
-<div class="text-center sans-light fs24 mb-3" data-tmpl="how">[[[how_reg]]]</div>
+<div class="text-center sans-light fs24" data-tmpl="how">[[[how_reg]]]</div>
 <div id="whatsabond" class="mt-1 fs14">
   <span class="ico-info"></span>
   <span class="ms-1">[[[whatsabond]]]</span>
