--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -7,7 +7,7 @@
   <span class="me-2 errcolor ico-cross d-hide pointer peers-table-icon" id="removeIconTmpl"></span>
   <div class="fill-abs d-flex align-items-stretch">
     {{- /* ASSET SELECT */ -}}
-    <div class="d-flex flex-column align-items-stretch stylish-overflow invisible" id="assetSelect">
+    <div class="panel d-flex flex-column align-items-stretch stylish-overflow invisible" id="assetSelect">
       <div id="iconSelectTmpl" class="icon-select d-flex align-items-stretch">
         <div class="position-relative overflow-visible">
           <img data-tmpl="img">
@@ -302,7 +302,7 @@
   {{- /* POP-UP FORMS */ -}}
   <div id="forms" class="d-hide">
 
-    <form id="checkmarkForm" class="flex-center flex-column">
+    <form id="checkmarkForm" class="flex-center flex-column plain">
       <div id="checkmarkBox" class="flex-center">
         <span class="ico-check" id="checkmark"></span>
       </div>
@@ -444,7 +444,7 @@
     </form>
 
     {{- /* RECONFIGURE WALLET */ -}}
-    <form class="pb-3 d-hide mt-3" id="reconfigForm" autocomplete="off">
+    <form class="d-hide" id="reconfigForm" autocomplete="off">
       <div class="form-closer recfg-form hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative fs22 sans-light">
         [[[Reconfigure]]]
