--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -11,7 +11,7 @@
   <title>{{.Title}}</title>
   <link href="/css/style.css?v={{commitHash}}" rel="stylesheet">
 </head>
-<body {{if .UserInfo.DarkMode}} class="dark"{{end}}>
+<body class="preload">
   <div class="popup-notes" id="popupNotes">
     <span data-tmpl="note">
       <div class="note-indicator d-inline-block" data-tmpl="indicator"></div>
