--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -6,7 +6,7 @@
   <span class="settings-gear ico-settings"></span><br>
   <div class="settings">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="darkMode"{{if .UserInfo.DarkMode}} checked{{end}}>
+      <input class="form-check-input" type="checkbox" value="" id="darkMode">
       <label class="form-check-label" for="darkMode">
         [[[Dark Mode]]]
       </label>
