work around ticket purchase bug

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -300,6 +300,10 @@
   .flex-wrap-lg {
     flex-wrap: wrap;
   }
+
+  #purchaseTicketsErrBox {
+    background-color: $light_body_bg;
+  }
 }
 
 @include media-breakpoint-up(md) {
