--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -37,7 +37,7 @@
                 <img id="tokenParentLogo" class="ms-1">
                 <span id="tokenParentName"></span>
               </div>
-              <div id="contractAddress" class="fs14"></div>
+              <div id="contractAddress" class="fs14 p-2"></div>
             </div>
             <div id="createWalletBox" class="my-2">
               <button class="py-1 px-2 hoverbg fs18" id="createWallet">[[[create_a_x_wallet]]]</button>
