adapt to new ui colors

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -585,7 +585,7 @@ div[data-handler=markets] {
 
       &.selected {
         opacity: 1;
-        background-color: #e8ebed;
+        background-color: #0001;
 
         div.opt-check {
           background-color: #2cce9c;
