--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -101,7 +101,7 @@
     </form>
 
     {{- /* SUCCESS ANIMATION */ -}}
-    <form id="checkmarkForm" class="flex-center flex-column">
+    <form id="checkmarkForm" class="flex-center flex-column plain">
       <div id="checkmarkBox" class="flex-center">
         <span class="ico-check" id="checkmark"></span>
       </div>
