--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -135,7 +135,7 @@ body.dark {
       }
 
       .order-opt.selected {
-        background-color: #222e38;
+        background-color: #fff1;
       }
     }
 
